log
Wed 23 Aug 2023 09:54:33 PM UTC: 
 list.c | 12 +++++++++++-
 1 file changed, 11 insertions(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘createList’:
list.c:37:4: error: ‘List’ {aka ‘struct List’} has no member named ‘primero’
   37 |   L->primero = NULL;
      |    ^~
list.c:38:4: error: ‘List’ {aka ‘struct List’} has no member named ‘ultimo’
   38 |   L->ultimo = NULL;
      |    ^~
list.c:39:4: error: ‘List’ {aka ‘struct List’} has no member named ‘tamano’
   39 |   L->tamano = 0;
      |    ^~
test.c: In function ‘createList’:
test.c:448:5: error: ‘main’ is normally a non-static function [-Werror=main]
  448 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:468:1: error: expected declaration or statement at end of input
  468 | }
      | ^
test.c:469: error: control reaches end of non-void function [-Werror=return-type]
At top level:
test.c:448:5: error: ‘main’ defined but not used [-Werror=unused-function]
  448 | int main( int argc, char *argv[] ) {
      |     ^~~~
In file included from test.c:5:
list.c:86:6: error: ‘cleanList’ defined but not used [-Werror=unused-function]
   86 | void cleanList(List * list) {
      |      ^~~~~~~~~
list.c:77:8: error: ‘popBack’ defined but not used [-Werror=unused-function]
   77 | void * popBack(List * list) {
      |        ^~~~~~~
list.c:64:6: error: ‘pushBack’ defined but not used [-Werror=unused-function]
   64 | void pushBack(List * list, void * data) {
      |      ^~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
d37dcdc
Wed 23 Aug 2023 09:54:56 PM UTC: 
 list.c | 5 +----
 1 file changed, 1 insertion(+), 4 deletions(-)
In file included from test.c:5:
list.c: In function ‘createList’:
list.c:35:4: error: ‘List’ {aka ‘struct List’} has no member named ‘primero’
   35 |   L->primero = NULL;
      |    ^~
list.c:36:4: error: ‘List’ {aka ‘struct List’} has no member named ‘ultimo’
   36 |   L->ultimo = NULL;
      |    ^~
list.c:37:4: error: ‘List’ {aka ‘struct List’} has no member named ‘tamano’
   37 |   L->tamano = 0;
      |    ^~
Compilation failed
7b00add
Wed 23 Aug 2023 09:57:47 PM UTC: 
 list.c | 18 ++++++++++++------
 1 file changed, 12 insertions(+), 6 deletions(-)
In file included from test.c:5:
list.c: In function ‘createList’:
list.c:45:10: error: ‘L’ undeclared (first use in this function)
   45 |   return L;
      |          ^
list.c:45:10: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
74c9327
Wed 23 Aug 2023 09:57:56 PM UTC: 
 list.c | 2 --
 1 file changed, 2 deletions(-)
 tests:  1|5
total_score: 10/70
a5dd90d
Wed 23 Aug 2023 10:02:49 PM UTC: 
 list.c | 9 ++++++---
 1 file changed, 6 insertions(+), 3 deletions(-)
 tests:  2|5
total_score: 15/70
ed50115
Wed 23 Aug 2023 10:04:39 PM UTC: 
 list.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  5|4
total_score: 25/70
a8e62a9
Wed 23 Aug 2023 10:09:55 PM UTC: 
 list.c | 8 ++++++++
 1 file changed, 8 insertions(+)
 tests:  9|3
total_score: 35/70
af62112
Wed 23 Aug 2023 10:21:07 PM UTC: 
 list.c | 17 +++++++++++++++++
 1 file changed, 17 insertions(+)
 tests:  10|2
total_score: 45/70
1620df1
Wed 23 Aug 2023 10:28:21 PM UTC: 
 list.c | 17 +++++++++++++++++
 1 file changed, 17 insertions(+)
 tests:  11|1
total_score: 55/70
e44ffc9
Wed 23 Aug 2023 10:51:00 PM UTC: 
 list.c | 83 +++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++-----
 1 file changed, 77 insertions(+), 6 deletions(-)
 tests:  12|0
total_score: 70/70
8aa61a4
Fri 25 Aug 2023 10:33:00 PM UTC: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  12|0
total_score: 70/70
3176799
Fri 25 Aug 2023 10:33:20 PM UTC: 
 list.c | 10 +++++-----
 1 file changed, 5 insertions(+), 5 deletions(-)
 tests:  12|0
total_score: 70/70
9d1c172
